--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,6 +16,7 @@ include_directories(${OPENGL_INCLUDE_DIR})
 
 find_package(GLEW REQUIRED)
 find_package(dxsdk-d3dx CONFIG REQUIRED)
+find_package(implot CONFIG REQUIRED)
 include_directories(${GLEW_INCLUDE_DIRS})
 
 find_package(glfw3 CONFIG REQUIRED)
@@ -23,10 +24,10 @@ find_package(glfw3 CONFIG REQUIRED)
 add_subdirectory(imgui)
 
 add_executable(${TEST_TARGET} "main.cpp")
-add_library(${TARGET} STATIC "gui.cpp" "inputtexts.cpp" "inputtexts.hpp" "timeplot.cpp" "timeplot.hpp" "gui.hpp" "clean_gui.cpp" "clean_gui.hpp" "tiles.cpp" "tiles.hpp" "popups.hpp" "popups.cpp" "design/MenuBg.h" "design/GeneralBg.h" "design/icon_font.h" "design/abyssinica.h" "design/blur.cpp" "design/blur_x.h" "design/blur_y.h" "tiles.cpp" "popups.cpp" "timeplot.cpp" "inputtexts.cpp") #"design/abyssinica.h" "design/blur.cpp" "design/blur.hpp" "design/blur_x.h" "design/blur_y.h" "design/GeneralBg.h" "design/icon_font.h" "design/MenuBg.h")
-target_include_directories(${TARGET} PUBLIC .)
+add_library(${TARGET} STATIC "gui.cpp" "inputtexts.cpp" "timeplot.cpp" "clean_gui.cpp" "tiles.cpp" "popups.cpp" "design/MenuBg.h" "design/GeneralBg.h" "design/icon_font.h" "design/abyssinica.h" "design/blur.cpp" "design/blur_x.h" "design/blur_y.h" "tiles.cpp" "popups.cpp" "timeplot.cpp" "inputtexts.cpp") 
+target_include_directories(${TARGET} PUBLIC .) # in cmake this includes all the hpp files.  
 
-target_link_libraries(${TARGET} imgui glfw ${GLEW_LIBRARIES} ${OPENGL_LIBRARIES} Microsoft::D3DX9 Microsoft::D3DX10 Microsoft::D3DX11)
+target_link_libraries(${TARGET} imgui glfw ${GLEW_LIBRARIES} ${OPENGL_LIBRARIES} Microsoft::D3DX9 Microsoft::D3DX10 Microsoft::D3DX11 implot::implot)
 
 target_link_libraries(${TEST_TARGET} ${TARGET} imgui glfw ${GLEW_LIBRARIES} ${OPENGL_LIBRARIES} Microsoft::D3DX9 Microsoft::D3DX10 Microsoft::D3DX11)
 
